# squidbot

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: github-issues-structured.md
.sisyphus/evidence/: task-1-baseline.txt  task-1-build-messages-source.txt  task-1-git-status.txt  task-1-import-audit.txt  task-1-issue-list.txt  task-1-patch-audit.txt  task-1-session-summary-grep.txt  task-10-jsonl-last-n.txt  task-2-build-messages-signature.txt  task-2-entrypoint.txt  task-2-issue-6-closed.json  task-3-branches.txt  task-3-cli-help.txt  task-3-imports.txt  task-4-onboard-tests.txt  task-4-pytest.txt  task-4-verify.txt  task-5-cli-help.txt  task-5-verification.txt  task-5-verify.txt  task-6-impl-check.txt  task-6-issue-2-closed.json
.sisyphus/plans/: 2026-02-25-memory-system-improvements.md  2026-02-25-performance-optimizations.md
docs/: redux-changes.md
docs/plans/: 2026-02-21-matrix-toolcall-visibility.md  2026-02-21-rich-cli-design.md  2026-02-21-rich-cli-implementation.md  2026-02-21-squidbot-design.md  2026-02-21-squidbot-implementation.md  2026-02-22-bootstrap-files-implementation.md  2026-02-22-email-channel-design.md  2026-02-22-email-channel-implementation.md  2026-02-22-gateway-banner-design.md  2026-02-22-gateway-banner-implementation.md  2026-02-22-gateway-design.md  2026-02-22-gateway-logging-design.md  2026-02-22-gateway-logging-implementation.md  2026-02-22-gateway-state-design.md  2026-02-22-gateway-state-implementation.md  2026-02-22-heartbeat-design.md  2026-02-22-heartbeat-implementation.md  2026-02-22-llm-pools-design.md  2026-02-22-llm-pools-implementation.md  2026-02-22-loguru-brace-style-design.md  2026-02-22-loguru-brace-style-implementation.md  2026-02-22-matrix-channel-design.md  2026-02-22-matrix-channel-implementation.md  2026-02-22-mcp-adapter-design.md  2026-02-22-mcp-adapter-implementation.md  2026-02-22-mypy-fixes.md  (+45 more)
tests/: test_matrix_channel.py  test_on_progress.py
workspace/: AGENTS.md  ENVIRONMENT.md  IDENTITY.md  SOUL.md  USER.md
(+115 files in other folders)
