[project]
name = "squidbot"
version = "0.1.0"
description = "A lightweight personal AI assistant"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=2.0",
    "httpx>=0.28",
    "matrix-nio>=0.25",
    "mcp>=1.0",
    "cyclopts>=3.0",
    "ruamel.yaml>=0.18",
    "cronsim>=2.0",
    "duckduckgo-search>=8.0",
    "rich>=13.0",
    "loguru>=0.7",
    "Pillow>=10.0",
    "mistune>=3.0",
    "aioimaplib>=1.0",
    "aiosmtplib>=3.0",
]

[project.scripts]
squidbot = "squidbot.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
strict = true

[[tool.mypy.overrides]]
module = ["nio", "nio.*", "magic"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aioimaplib", "aioimaplib.*", "aiosmtplib", "aiosmtplib.*"]
ignore_missing_imports = true
